--- a/package/package.json
+++ b/package/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
+    "node-telegram-bot-api": "^0.66.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
